--- a/app/src/main/res/layout/cards.xml
+++ b/app/src/main/res/layout/cards.xml
@@ -8,14 +8,31 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:padding="10dp">
 
-        <ImageView
-            android:id="@+id/fbimage"
-            android:scaleType="centerCrop"
-            android:layout_width="fill_parent"
-            android:layout_height="250dp" />
         <TextView
+            android:padding="5dp"
+         android:id="@+id/membername"
+            android:text="MEMBER"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/md_white_1000"
+            android:background="@color/cast_intro_overlay_button_background_color"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:background="@color/md_black_1000"
+            android:id="@+id/fbimage"
+            android:layout_below="@id/membername"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent" />
+        <TextView
+            android:padding="5dp"
+            android:id="@+id/message"
             android:layout_below="@id/fbimage"
             android:text="test"
             android:layout_width="wrap_content"
