--- a/app/src/main/res/layout/home_news.xml
+++ b/app/src/main/res/layout/home_news.xml
@@ -18,25 +18,26 @@
 
     </com.daimajia.slider.library.SliderLayout>
 
-    <ScrollView
+
+
+    <com.yalantis.phoenix.PullToRefreshView
+
+        android:id="@+id/pull_to_refresh"
         android:layout_below="@+id/slider"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:scrollbars="vertical">
-        <LinearLayout
-            android:id="@+id/seTaskActivityRoot"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+        android:layout_height="match_parent">
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/listV"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:animationCache="false" />
-        </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:clipToPadding="false"
+            android:padding="5dp"
+            android:scrollbars="vertical"
+            tools:listitem="@layout/cards" />
 
-    </ScrollView>
+    </com.yalantis.phoenix.PullToRefreshView>
 
     <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
         android:id="@+id/circularFillableLoaders"
