--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"/>
 
 
-
-        <FrameLayout android:layout_width="match_parent"
+        <FrameLayout
+            android:layout_below="@+id/toolbar"
+            android:layout_width="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
                          android:layout_height="match_parent"
         	                 android:id="@+id/container">
 
             </FrameLayout>
-
+</RelativeLayout>
 
 
 
