--- a/app/src/main/res/layout/item_cal.xml
+++ b/app/src/main/res/layout/item_cal.xml
@@ -4,6 +4,20 @@
     android:background="@android:color/holo_blue_dark"
     android:layout_height="wrap_content" >
 
+    <TextView
+        android:background="@android:color/holo_blue_light"
+        android:padding="10dp"
+        android:id="@+id/timetitle"
+        android:paddingLeft="3dp"
+        android:textStyle="bold"
+        android:textSize="28sp"
+        android:textColor="@android:color/white"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="22:30"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:padding="10dp"
@@ -13,13 +27,13 @@
         android:textSize="18sp"
         android:textColor="@android:color/white"
 
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DIGITAL LIVE "
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/newsimage" />
+        android:layout_toEndOf="@+id/timetitle" />
     <TextView
-        android:layout_below="@+id/newstitle"
+
         android:paddingLeft="10dp"
         android:id="@+id/memberdetail"
 
@@ -28,8 +42,10 @@
         android:paddingBottom="10dp"
         android:textColor="@android:color/white"
         android:background="@android:color/holo_blue_dark"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="JAN | MUSIC " />
+        android:text="JAN | MUSIC "
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/timetitle" />
 
 </RelativeLayout>
