--- a/app/src/main/res/layout/item_cal.xml
+++ b/app/src/main/res/layout/item_cal.xml
@@ -2,7 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:background="@android:color/holo_blue_dark"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    >
 
     <TextView
         android:background="@android:color/holo_blue_light"
@@ -14,7 +17,7 @@
         android:textColor="@android:color/white"
 
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="22:30"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
@@ -32,20 +35,21 @@
         android:text="DIGITAL LIVE "
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/timetitle" />
-    <TextView
 
-        android:paddingLeft="10dp"
+    <com.google.android.flexbox.FlexboxLayout
+        android:orientation="horizontal"
+        android:paddingLeft="5dp"
         android:id="@+id/memberdetail"
-
-        android:textStyle="bold"
-        android:textSize="12sp"
-        android:paddingBottom="10dp"
-        android:textColor="@android:color/white"
-        android:background="@android:color/holo_blue_dark"
-        android:layout_width="wrap_content"
+        android:padding="5dp"
+        app:flexWrap="wrap"
+        app:alignItems="flex_start"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="JAN | MUSIC "
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/timetitle" />
+        android:layout_below="@+id/newstitle"
+        android:layout_toEndOf="@+id/timetitle">
+
+
+
+    </com.google.android.flexbox.FlexboxLayout>
 
 </RelativeLayout>
