--- a/app/src/main/res/layout/item_cal.xml
+++ b/app/src/main/res/layout/item_cal.xml
@@ -1,33 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@android:color/holo_blue_dark"
+    android:background="@drawable/gradient1"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     >
 
     <TextView
-        android:background="@android:color/holo_blue_light"
-        android:padding="10dp"
+        android:padding="3dp"
         android:id="@+id/timetitle"
         android:paddingLeft="3dp"
         android:textStyle="bold"
-        android:textSize="28sp"
+        android:textSize="34sp"
         android:textColor="@android:color/white"
 
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="22:30"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:id="@+id/noti_cal"
+        android:layout_below="@+id/timetitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="เตือน"
+        />
+
     <TextView
-        android:padding="10dp"
+        android:padding="3dp"
         android:id="@+id/newstitle"
         android:paddingLeft="3dp"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="26sp"
         android:textColor="@android:color/white"
 
         android:layout_width="wrap_content"
@@ -40,7 +47,7 @@
         android:orientation="horizontal"
         android:paddingLeft="5dp"
         android:id="@+id/memberdetail"
-        android:padding="5dp"
+        android:padding="3dp"
         app:flexWrap="wrap"
         app:alignItems="flex_start"
         android:layout_width="match_parent"
