--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#AA00FF</color>
-    <color name="colorPrimaryDark">#7B1FA2</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#c995c1</color>
+    <color name="colorPrimaryDark">#c995c1</color>
+    <color name="colorAccent">#c995c1</color>
+    <color name="linecolor">#ffffff</color>
+    <color name="linecolor1">#c995c1</color>
 </resources>
