--- a/app/src/main/res/drawable/gradient1.xml
+++ b/app/src/main/res/drawable/gradient1.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#ff2d9a59"
-        android:endColor="#ff42959a"
+        android:startColor="#ff6597"
+        android:endColor="#ff8f7c"
         android:angle="270"/>
 
 </shape>
